--- a/Check.SPort/App.xaml
+++ b/Check.SPort/App.xaml
@@ -1,10 +1,11 @@
 ﻿<Application x:Class="Check.SPort.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:view="clr-namespace:Check.SPort.View"
+             xmlns:local="clr-namespace:Check.SPort"
              xmlns:vm="clr-namespace:Check.SPort.ViewModel"
-             xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:view="clr-namespace:Check.SPort.View"
              StartupUri="MainWindow.xaml">
+    
     <Application.Resources>
         <!-- Aggiungi questi riferimenti per Material Design -->
         <ResourceDictionary>
@@ -14,12 +15,24 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.ObsoleteStyles.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.ObsoleteBrushes.xaml" />
-                <ResourceDictionary Source="/Styles/Pages.xaml" />
                 <ResourceDictionary Source="/Styles/Buttons.xaml" />
+                <ResourceDictionary Source="/Styles/Pages.xaml" />
                 <ResourceDictionary Source="/Styles/TextBlock.xaml" />
-                <ResourceDictionary Source="/Utilities/DataTemplates.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            
+
+            <DataTemplate DataType="{x:Type vm:MainViewModel}">
+                <view:MainView />
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vm:ProtocolCustomVM}">
+                <view:ProtocolCustomView />
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vm:ProtocolXonXoffVM}">
+                <view:ProtocolXonXoffView />
+            </DataTemplate>
         </ResourceDictionary>
+
     </Application.Resources>
+    
 </Application>
