--- a/Check.SPort/View/MainView.xaml
+++ b/Check.SPort/View/MainView.xaml
@@ -14,10 +14,10 @@
     
     <Grid>
 
-        <Border CornerRadius="0,20,20,0">
-            <Border.Background>
-                <ImageBrush ImageSource="\Resources\Image\sfondo_001.jpg" Stretch="UniformToFill"/>
-            </Border.Background>
+        <Border CornerRadius="0,20,20,0" Margin="0,5,5,0">
+
+            <Image Source="/Resources/Image/home_page.png" Stretch="Fill" Width="725" />
+
         </Border>
 
     </Grid>
