--- a/Check.SPort/View/ProtocolXonXoffView.xaml
+++ b/Check.SPort/View/ProtocolXonXoffView.xaml
@@ -6,7 +6,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Check.SPort.View"
              xmlns:vm="clr-namespace:Check.SPort.ViewModel"
-             Background="{StaticResource MaterialDesignDarkBackground}"
              FontFamily="Impact"
              mc:Ignorable="d"
              d:DesignHeight="450"
@@ -62,7 +61,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Border>
+    <Border Margin="9" CornerRadius="0,20,20,0" Background="{StaticResource MaterialDesignDarkBackground}">
 
         <Grid>
             <Grid.ColumnDefinitions>
