--- a/Check.SPort/View/ProtocolXonXoffView.xaml
+++ b/Check.SPort/View/ProtocolXonXoffView.xaml
@@ -61,9 +61,9 @@
         </Style>
     </UserControl.Resources>
 
-    <Border Margin="9" CornerRadius="0,20,20,0" Background="{StaticResource MaterialDesignDarkBackground}">
+    <Border Margin="9" CornerRadius="0,0,20,0" Background="{StaticResource MaterialDesignDarkBackground}">
 
-        <Grid>
+        <Grid Margin="0,15,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -159,9 +159,9 @@
                 </TextBox>
             </UniformGrid>
 
-            <UniformGrid Rows="2" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <UniformGrid Columns="2" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Left">
 
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,5,0">
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                     <RadioButton x:Name="rbtnSerial" GroupName="ETH" Padding="1,2" IsChecked="True" Style="{StaticResource MaterialDesignRadioButton}"
                                  Background="Black" Click="ControlloChangeRB_Click">
                         <RadioButton.Content>
