--- a/Check.SPort/App.xaml
+++ b/Check.SPort/App.xaml
@@ -20,16 +20,16 @@
                 <ResourceDictionary Source="/Styles/TextBlock.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <DataTemplate DataType="{x:Type vm:MainViewModel}">
-                <view:MainView />
+            <DataTemplate DataType="{x:Type vm:HomeViewModel}">
+                <view:HomeView />
             </DataTemplate>
 
-            <DataTemplate DataType="{x:Type vm:ProtocolCustomVM}">
-                <view:ProtocolCustomView />
+            <DataTemplate DataType="{x:Type vm:SettingsViewModel}">
+                <view:SettingsView />
             </DataTemplate>
 
-            <DataTemplate DataType="{x:Type vm:ProtocolXonXoffVM}">
-                <view:ProtocolXonXoffView />
+            <DataTemplate DataType="{x:Type vm:ComunicazioneViewModel}">
+                <view:ComunicazioneView />
             </DataTemplate>
         </ResourceDictionary>
 
