--- a/Check.SPort/View/ComunicazioneView.xaml
+++ b/Check.SPort/View/ComunicazioneView.xaml
@@ -1,17 +1,19 @@
-﻿<UserControl x:Class="Check.SPort.View.ProtocolCustomView"
+﻿<UserControl x:Class="Check.SPort.View.ComunicazioneView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Check.SPort.View"
              xmlns:vm="clr-namespace:Check.SPort.ViewModel"
-             mc:Ignorable="d" 
+             FontFamily="Impact"
+             mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="725"
              Style="{StaticResource Page_Style}">
 
     <UserControl.DataContext>
-        <vm:ProtocolCustomVM />
+        <vm:ComunicazioneViewModel />
     </UserControl.DataContext>
 
     <Grid Margin="9">
