--- a/Check.SPort/View/HomeView.xaml
+++ b/Check.SPort/View/HomeView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Check.SPort.View.MainView"
+﻿<UserControl x:Class="Check.SPort.View.HomeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,7 +9,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450"
              d:DesignWidth="725"
-             d:DataContext="{d:DesignInstance vm:MainViewModel}"
              Style="{StaticResource Page_Style}">
     
     <Grid>
