--- a/Check.SPort/Styles/TextBlock.xaml
+++ b/Check.SPort/Styles/TextBlock.xaml
@@ -9,6 +9,18 @@
         <Setter Property="FontSize" Value="20" />
     </Style>
 
+    <Style x:Key="TxtInput" TargetType="{x:Type TextBox}" BasedOn="{StaticResource MaterialDesignFilledTextBox}">
+        <Setter Property="Width" Value="300" />
+        <Setter Property="Height" Value="80" />
+        <Setter Property="IsReadOnly" Value="True" />
+        <Setter Property="AcceptsReturn" Value="True" />
+        <Setter Property="TextWrapping" Value="Wrap" />
+    </Style>
+    
+    <Style x:Key="LblInfo" TargetType="{x:Type Label}" BasedOn="{StaticResource MaterialDesignLabel}">
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
+
     <Style x:Key="TxtStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource MaterialDesignFilledTextBox}">
         <Setter Property="FontSize" Value="15" />
         <Setter Property="Height" Value="55" />
