--- a/Check.SPort/View/SettingsView.xaml
+++ b/Check.SPort/View/SettingsView.xaml
@@ -1,20 +1,117 @@
 ﻿<UserControl x:Class="Check.SPort.View.SettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Check.SPort.View"
              xmlns:vm="clr-namespace:Check.SPort.ViewModel"
+             FontFamily="Segoe UI"
+             FontWeight="SemiBold"
+             FontSize="15"
              mc:Ignorable="d" 
-             d:DesignHeight="450"
-             d:DesignWidth="725"
+             d:DesignHeight="300"
+             d:DesignWidth="700"
              Style="{StaticResource Page_Style}">
 
     <UserControl.DataContext>
         <vm:SettingsViewModel />
     </UserControl.DataContext>
 
-    <Grid Margin="9">
-        <Border CornerRadius="0,0,20,0" Background="{StaticResource MaterialDesignDarkBackground}" />
-    </Grid>
+    <Border CornerRadius="0,0,20,0" Background="{StaticResource MaterialDesignDarkBackground}">
+
+        <Grid Margin="9">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <Border Grid.Row="1">
+                <Grid Grid.Row="1">
+
+                    <Border>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+
+                            <UniformGrid Rows="5" Columns="2" Margin="10,0">
+
+                                <ComboBox md:HintAssist.Hint="Baud Rate"
+                                          ItemsSource="{Binding SettingReg.SerialPortSettings.BaudRateList}" 
+                                          SelectedValue="{Binding SettingReg.SerialPortSettings.BaudRate}"
+                                          Style="{StaticResource FilledComboBox}"/>
+
+                                
+                                <ComboBox md:HintAssist.Hint="Parity"
+                                          ItemsSource="{Binding SettingReg.SerialPortSettings.Parities}"
+                                          SelectedValue="{Binding SettingReg.SerialPortSettings.Parity}"
+                                          Style="{StaticResource FilledComboBox}"/>
+
+                                <ComboBox md:HintAssist.Hint="Stop Bit"
+                                          ItemsSource="{Binding SettingReg.SerialPortSettings.StopBitsList}"
+                                          SelectedValue="{Binding SettingReg.SerialPortSettings.StopBits}"
+                                          Style="{StaticResource FilledComboBox}"/>
+
+                                <Label Content="Data Bit" Grid.Row="3" Grid.Column="0" Style="{StaticResource LblInfo}" />
+                                <ComboBox Grid.Row="3" Grid.Column="1"
+                                          md:HintAssist.Hint="Baud Rate"
+                                          ItemsSource="{Binding SettingReg.SerialPortSettings.DataBitsList}" 
+                                          SelectedValue="{Binding SettingReg.SerialPortSettings.DataBits}"
+                                          Style="{StaticResource FilledComboBox}"/>
+                            </UniformGrid>
+
+                            <Grid Grid.Column="1" Margin="10,0">
+
+                                <Label Content="Handshake" Grid.Row="0" Grid.Column="0" Style="{StaticResource LblInfo}" />
+                                <ComboBox Width="175" Height="21" Grid.Row="0" Grid.Column="1"
+                                          ItemsSource="{Binding SettingReg.SerialPortSettings.Handshakes}" SelectedValue="{Binding SettingReg.SerialPortSettings.HandshakeProp}"/>
+
+                                <CheckBox Content="Dtr Enable" Width="auto" Height="30" HorizontalAlignment="Left" IsChecked="{Binding SettingReg.SerialPortSettings.Dtr}" Grid.Row="1" Grid.Column="0" />
+
+                                <CheckBox Content="Rtr Enable" Width="auto" Height="30" HorizontalAlignment="Left" IsChecked="{Binding SettingReg.SerialPortSettings.Rts}" Grid.Row="2" Grid.Column="0" />
+                            </Grid>
+
+                            <UniformGrid Rows="1" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center">
+                                <Button Content="Refesh" Command="{Binding RefreshSerialSettingsCommand}" Width="75" Height="23" />
+                                <Button Content="Save" Command="{Binding SaveCommand}" Width="75" Height="23" />
+                            </UniformGrid>
+                        </Grid>
+
+
+
+                    </Border>
+
+                    <!--<GroupBox Grid.Row="1" Header="Connessione" Style="{StaticResource MaterialDesignCardGroupBox}" Width="350" Visibility="Hidden">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <RadioButton Grid.Row="0" Grid.Column="0" Content="Serial" GroupName="ConnType" IsChecked="{Binding SettingReg.IsSeriale}" />
+                            <ComboBox Grid.Row="0" Grid.Column="1" Width="100" Height="30" HorizontalAlignment="Center" 
+                                          ItemsSource="{Binding SerialPorts}" SelectedValue="{Binding SelectedSerialPort}" />
+
+                            <RadioButton Grid.Row="1" Grid.Column="0" Content="Ethernet" GroupName="ConnType" IsChecked="{Binding SettingReg.IsEthernet}" />
+                            <TextBox Grid.Row="1" Grid.Column="1" Height="30" Width="100" Text="{Binding SettingReg.EthernetSettings.IpAddress}" />
+                            <TextBox Grid.Row="1" Grid.Column="2" Height="30" Width="55" Text="{Binding SettingReg.EthernetSettings.Port}" />
+                        </Grid>
+                    </GroupBox>-->
+                </Grid>
+            </Border>
+        </Grid>
+    </Border>
 </UserControl>
